--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "rest-server": "nodemon main.js"
+    "start": "nodemon main.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "mongoose": "^7.0.3",
     "ngrok": "^4.3.3",
     "nodemon": "^2.0.20",
-    "socket.io": "^2.5.0"
+    "socket.io": "^2.5.0",
+    "web-push": "^3.5.0"
   }
 }
